func and route for csv file
